feat: redesign UI with a Stripe-inspired theme and add sales model with expanded sales type fields.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <aside class="sidebar">
             <div class="brand">
                 <ion-icon name="globe-outline"></ion-icon>
-                <span>SubseaManager</span>
+                <span>Cable Manager</span>
             </div>
 
             <ul class="nav-menu">
