--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </li>
                 <li class="nav-item" data-view="inventory">
                     <ion-icon name="hardware-chip-outline"></ion-icon>
-                    Inventory (Resources)
+                    Inventory
                 </li>
                 <li class="nav-item" data-view="sales">
                     <ion-icon name="trending-up-outline"></ion-icon>
