--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     Dashboard
                 </li>
                 <li class="nav-item" data-view="inventory">
-                    <ion-icon name="hardware-chip-outline"></ion-icon>
+                    <ion-icon name="cube-outline"></ion-icon>
                     Inventory
                 </li>
                 <li class="nav-item" data-view="sales">
