--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
                 </li>
                 <li class="nav-item" data-view="sales">
                     <ion-icon name="trending-up-outline"></ion-icon>
-                    Sales & Revenue
+                    <span class="nav-label-full">Sales & Revenue</span>
+                    <span class="nav-label-short">Sales</span>
                 </li>
             </ul>
 
