fix: Handle auth tokens from email links in reset-password page

--- a/reset-password.html
+++ b/reset-password.html
@@ -276,6 +276,42 @@
             messageIcon.setAttribute('name', type === 'error' ? 'alert-circle-outline' : 'checkmark-circle-outline');
         }
 
+        // Wait for Supabase to process the auth token from URL hash
+        (async () => {
+            // Supabase automatically detects hash fragments and establishes session
+            // We need to wait for this to complete
+            const { data: { session }, error } = await window.SupabaseClient.auth.getSession();
+
+            if (error) {
+                showMessage('Invalid or expired link. Please request a new one.', 'error');
+                form.style.display = 'none';
+                return;
+            }
+
+            if (!session) {
+                // Check if there's a hash fragment that needs processing
+                const hashParams = new URLSearchParams(window.location.hash.substring(1));
+                const accessToken = hashParams.get('access_token');
+                const type = hashParams.get('type');
+
+                if (accessToken) {
+                    // Wait a bit for Supabase to process the token
+                    await new Promise(resolve => setTimeout(resolve, 500));
+
+                    const { data: { session: newSession } } = await window.SupabaseClient.auth.getSession();
+                    if (!newSession) {
+                        showMessage('Invalid or expired link. Please request a new one.', 'error');
+                        form.style.display = 'none';
+                        return;
+                    }
+                } else {
+                    showMessage('Invalid or expired link. Please request a new one.', 'error');
+                    form.style.display = 'none';
+                    return;
+                }
+            }
+        })();
+
         // Handle form submission
         form.addEventListener('submit', async (e) => {
             e.preventDefault();
