fix: Support invite and signup types in reset-password page

--- a/reset-password.html
+++ b/reset-password.html
@@ -276,36 +276,31 @@
             messageIcon.setAttribute('name', type === 'error' ? 'alert-circle-outline' : 'checkmark-circle-outline');
         }
 
-        // Wait for Supabase to process the auth token from URL hash
+        // Supabase email link token handling
         (async () => {
-            // Supabase automatically detects hash fragments and establishes session
-            // We need to wait for this to complete
-            const { data: { session }, error } = await window.SupabaseClient.auth.getSession();
+            const hashParams = new URLSearchParams(window.location.hash.substring(1));
+            const type = hashParams.get('type');
+            const accessToken = hashParams.get('access_token');
+            const refreshToken = hashParams.get('refresh_token');
 
-            if (error) {
-                showMessage('Invalid or expired link. Please request a new one.', 'error');
-                form.style.display = 'none';
-                return;
-            }
+            if ((type === 'recovery' || type === 'invite' || type === 'signup') && accessToken && refreshToken) {
+                // Set session from tokens in URL hash
+                const { data: { session }, error } = await window.SupabaseClient.auth.setSession({
+                    access_token: accessToken,
+                    refresh_token: refreshToken
+                });
 
-            if (!session) {
-                // Check if there's a hash fragment that needs processing
-                const hashParams = new URLSearchParams(window.location.hash.substring(1));
-                const accessToken = hashParams.get('access_token');
-                const type = hashParams.get('type');
-
-                if (accessToken) {
-                    // Wait a bit for Supabase to process the token
-                    await new Promise(resolve => setTimeout(resolve, 500));
-
-                    const { data: { session: newSession } } = await window.SupabaseClient.auth.getSession();
-                    if (!newSession) {
-                        showMessage('Invalid or expired link. Please request a new one.', 'error');
-                        form.style.display = 'none';
-                        return;
-                    }
-                } else {
+                if (error || !session) {
                     showMessage('Invalid or expired link. Please request a new one.', 'error');
+                    form.style.display = 'none';
+                    return;
+                }
+                // Session set successfully, form stays visible
+            } else if (!accessToken) {
+                // No tokens - check if we already have a valid session
+                const { data: { session } } = await window.SupabaseClient.auth.getSession();
+                if (!session) {
+                    showMessage('Invalid or missing link. Please request a new one.', 'error');
                     form.style.display = 'none';
                     return;
                 }
