--- a/reset-password.html
+++ b/reset-password.html
@@ -221,7 +221,7 @@
                     <ion-icon name="globe-outline"></ion-icon>
                     <span>Cable Manager</span>
                 </div>
-                <p class="reset-subtitle">Set your new password</p>
+                <p class="reset-subtitle" id="subtitle">Set your password</p>
             </div>
 
             <form class="reset-form" id="reset-form">
@@ -231,7 +231,7 @@
                 </div>
 
                 <div class="form-group">
-                    <label class="form-label" for="password">New Password</label>
+                    <label class="form-label" for="password" id="password-label">Password</label>
                     <input type="password" id="password" name="password" class="form-input"
                         placeholder="Enter new password" required minlength="6" autocomplete="new-password">
                 </div>
@@ -295,7 +295,17 @@
                     form.style.display = 'none';
                     return;
                 }
-                // Session set successfully, form stays visible
+
+                // Update UI based on type
+                const subtitle = document.getElementById('subtitle');
+                const passwordLabel = document.getElementById('password-label');
+                if (type === 'invite' || type === 'signup') {
+                    subtitle.textContent = 'Welcome! Set your password to get started';
+                    passwordLabel.textContent = 'Create Password';
+                } else {
+                    subtitle.textContent = 'Set your new password';
+                    passwordLabel.textContent = 'New Password';
+                }
             } else if (!accessToken) {
                 // No tokens - check if we already have a valid session
                 const { data: { session } } = await window.SupabaseClient.auth.getSession();
