--- a/index.html
+++ b/index.html
@@ -93,8 +93,18 @@
     <script src="assets/js/app.js"></script>
 
     <script>
-        // Auth check - redirect to login if not authenticated
+        // Check if this is a redirect from email link (invite/recovery)
         (async () => {
+            const hashParams = new URLSearchParams(window.location.hash.substring(1));
+            const type = hashParams.get('type');
+
+            // If coming from invite or recovery email, redirect to password setup page
+            if (type === 'invite' || type === 'recovery' || type === 'signup') {
+                window.location.href = 'reset-password.html' + window.location.hash;
+                return;
+            }
+
+            // Normal auth check - redirect to login if not authenticated
             const isAuthed = await Auth.requireAuth();
             if (isAuthed) {
                 // Show user section
