feat: improve mobile UX with responsive user menu and FAB
- Move user menu display breakpoint from 768px to 1024px for iPad Pro support
- Add dark/light mode toggle to mobile user dropdown menu
- Implement Floating Action Button (FAB) for Inventory and Sales views
- FAB positioned above bottom nav with smooth animations
- Hide header action buttons on mobile in favor of FAB

--- a/index.html
+++ b/index.html
@@ -80,6 +80,10 @@
                     </button>
                     <div class="mobile-user-dropdown" id="mobile-user-dropdown">
                         <div class="mobile-user-email" id="mobile-user-email"></div>
+                        <button class="mobile-user-item" id="mobile-theme-toggle">
+                            <ion-icon name="moon-outline" id="mobile-theme-icon"></ion-icon>
+                            <span id="mobile-theme-label">Dark Mode</span>
+                        </button>
                         <button class="mobile-user-item" id="mobile-change-password">
                             <ion-icon name="key-outline"></ion-icon> Change Password
                         </button>
@@ -167,6 +171,15 @@
             document.getElementById('mobile-user-dropdown')?.classList.remove('open');
             // Reuse existing change password logic
             document.getElementById('change-password-btn')?.click();
+        });
+
+        // Mobile theme toggle handler
+        document.getElementById('mobile-theme-toggle')?.addEventListener('click', () => {
+            document.getElementById('mobile-user-dropdown')?.classList.remove('open');
+            // Reuse App's theme toggle
+            if (typeof App !== 'undefined' && App.toggleTheme) {
+                App.toggleTheme();
+            }
         });
 
         // Logout handler
