feat(crm-srm): add Customer & Supplier management
Phase A - Store Infrastructure:
- Add customers and suppliers arrays to Store
- Fetch data from new tables in init()
- Add full CRUD methods for both entities

Phase B - Management Interfaces:
- Add Customers and Suppliers navigation items to sidebar
- Implement renderCustomers() with search, pagination
- Implement renderSuppliers() with search, type filter, pagination
- Add Customer modal (add/edit/delete)
- Add Supplier modal (add/edit/delete)
- Update FAB to support new views

Database:
- Add SQL migration file for customers/suppliers tables with RLS

--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
                     <span class="nav-label-full">Sales & Revenue</span>
                     <span class="nav-label-short">Sales</span>
                 </li>
+                <li class="nav-item" data-view="customers">
+                    <ion-icon name="people-outline"></ion-icon>
+                    Customers
+                </li>
+                <li class="nav-item" data-view="suppliers">
+                    <ion-icon name="business-outline"></ion-icon>
+                    Suppliers
+                </li>
             </ul>
 
             <div style="margin-top: auto; padding-bottom: 1rem;">
