--- a/index.html
+++ b/index.html
@@ -116,6 +116,11 @@
     <script src="assets/js/supabase.js"></script>
     <script src="assets/js/auth.js"></script>
     <script src="assets/js/store.js"></script>
+    <!-- Utility Modules -->
+    <script src="assets/js/modules/financials.js"></script>
+    <script src="assets/js/modules/validation.js"></script>
+    <script src="assets/js/modules/csv.js"></script>
+    <!-- Main Application -->
     <script src="assets/js/app.js"></script>
 
     <script>
