refactor: Phase 3 - extract CRM modules (Customers & Suppliers)
- Created modules/customers.js with renderCustomers, openCustomerModal, saveCustomer, deleteCustomer
- Created modules/suppliers.js with renderSuppliers, openSupplierModal, saveSupplier, deleteSupplier
- Updated App.init() to call module initializers
- Removed ~400 lines from app.js (4496 -> 4096 lines)

--- a/index.html
+++ b/index.html
@@ -120,6 +120,9 @@
     <script src="assets/js/modules/financials.js"></script>
     <script src="assets/js/modules/validation.js"></script>
     <script src="assets/js/modules/csv.js"></script>
+    <!-- CRM Modules -->
+    <script src="assets/js/modules/customers.js"></script>
+    <script src="assets/js/modules/suppliers.js"></script>
     <!-- Main Application -->
     <script src="assets/js/app.js"></script>
 
