refactor: Phase 4 - extract Bulk Operations module
- Created modules/bulkOps.js with sales and inventory bulk selection/export
- Updated App.init() to call initBulkOpsModule()
- Removed ~150 lines from app.js (4097 -> 3945 lines)

Total reduction: 4662 -> 3945 lines (717 lines, ~15% smaller)

--- a/index.html
+++ b/index.html
@@ -123,6 +123,8 @@
     <!-- CRM Modules -->
     <script src="assets/js/modules/customers.js"></script>
     <script src="assets/js/modules/suppliers.js"></script>
+    <!-- Operations Modules -->
+    <script src="assets/js/modules/bulkOps.js"></script>
     <!-- Main Application -->
     <script src="assets/js/app.js"></script>
 
