fix: revert defer attributes to fix script loading order
The inline initialization script requires Auth, Store, and App to be
loaded synchronously before it runs.

--- a/index.html
+++ b/index.html
@@ -113,20 +113,20 @@
 
     <!-- Supabase SDK -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script defer src="assets/js/supabase.js"></script>
-    <script defer src="assets/js/auth.js"></script>
-    <script defer src="assets/js/store.js"></script>
+    <script src="assets/js/supabase.js"></script>
+    <script src="assets/js/auth.js"></script>
+    <script src="assets/js/store.js"></script>
     <!-- Utility Modules -->
-    <script defer src="assets/js/modules/financials.js"></script>
-    <script defer src="assets/js/modules/validation.js"></script>
-    <script defer src="assets/js/modules/csv.js"></script>
+    <script src="assets/js/modules/financials.js"></script>
+    <script src="assets/js/modules/validation.js"></script>
+    <script src="assets/js/modules/csv.js"></script>
     <!-- CRM Modules -->
-    <script defer src="assets/js/modules/customers.js"></script>
-    <script defer src="assets/js/modules/suppliers.js"></script>
+    <script src="assets/js/modules/customers.js"></script>
+    <script src="assets/js/modules/suppliers.js"></script>
     <!-- Operations Modules -->
-    <script defer src="assets/js/modules/bulkOps.js"></script>
+    <script src="assets/js/modules/bulkOps.js"></script>
     <!-- Main Application -->
-    <script defer src="assets/js/app.js"></script>
+    <script src="assets/js/app.js"></script>
 
     <script>
         // Check if this is a redirect from email link (invite/recovery)
