feat: complete ES6 module migration for view layer
- Extract Dashboard, Inventory, Sales, and SalesForm to ES6 modules
- app.js reduced from 3,633 to 514 lines (-86%)
- All modules use context parameter pattern for App access
- Update index.html to use type='module' for proper loading
- Maintain window.App bridge for onclick handler compatibility

New modules:
- modules/dashboard.js (~290 lines)
- modules/inventory.js (~860 lines)
- modules/sales.js (~553 lines)
- modules/salesForm.js (~1,780 lines)

Closes #ES6-migration

--- a/index.html
+++ b/index.html
@@ -125,10 +125,10 @@
     <script src="assets/js/modules/suppliers.js"></script>
     <!-- Operations Modules -->
     <script src="assets/js/modules/bulkOps.js"></script>
-    <!-- Main Application -->
-    <script src="assets/js/app.js"></script>
+    <!-- Main Application (ES6 Module) -->
+    <script type="module" src="assets/js/app.js"></script>
 
-    <script>
+    <script type="module">
         // Check if this is a redirect from email link (invite/recovery)
         (async () => {
             const hashParams = new URLSearchParams(window.location.hash.substring(1));
