refactor: modularize CSS into reusable components
- Split style.css (1684 lines) and components.css (861 lines) into 12 modules
- Created base/ (variables, reset, typography)
- Created layout/ (grid, sidebar, header)
- Created pages/ (login, reset-password, dashboard)
- Added utilities.css and responsive.css
- Created main.css entry point with @import statements
- Updated index.html to use main.css
- Updated login.html and reset-password.html to use modular CSS
- Fixed CSS variable naming issues (--bg-primary → --bg-body, etc.)
- Verified all pages display correctly in both dark and light themes

--- a/reset-password.html
+++ b/reset-password.html
@@ -5,212 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <title>Reset Password - Cable Manager</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/base/variables.css">
+    <link rel="stylesheet" href="assets/css/pages/reset-password.css">
     <!-- Ionicons for Icons -->
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-    <style>
-        /* Reset Password Page Styles (same as login) */
-        .reset-container {
-            min-height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            background: var(--bg-primary);
-            padding: 1rem;
-        }
-
-        .reset-card {
-            width: 100%;
-            max-width: 420px;
-            background: var(--bg-card);
-            border-radius: 16px;
-            padding: 2.5rem;
-            box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.4);
-            border: 1px solid var(--border-color);
-        }
-
-        .reset-header {
-            text-align: center;
-            margin-bottom: 2rem;
-        }
-
-        .reset-logo {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 0.75rem;
-            margin-bottom: 1rem;
-        }
-
-        .reset-logo ion-icon {
-            font-size: 2.5rem;
-            color: var(--accent-primary);
-        }
-
-        .reset-logo span {
-            font-size: 1.5rem;
-            font-weight: 700;
-            color: var(--text-primary);
-        }
-
-        .reset-subtitle {
-            color: var(--text-muted);
-            font-size: 0.95rem;
-        }
-
-        .reset-form {
-            display: flex;
-            flex-direction: column;
-            gap: 1.25rem;
-        }
-
-        .form-group {
-            display: flex;
-            flex-direction: column;
-            gap: 0.5rem;
-        }
-
-        .form-label {
-            font-size: 0.875rem;
-            font-weight: 500;
-            color: var(--text-secondary);
-        }
-
-        .form-input {
-            width: 100%;
-            padding: 0.875rem 1rem;
-            background: var(--bg-primary);
-            border: 1px solid var(--border-color);
-            border-radius: 8px;
-            color: var(--text-primary);
-            font-size: 1rem;
-            transition: border-color 0.2s, box-shadow 0.2s;
-        }
-
-        .form-input:focus {
-            outline: none;
-            border-color: var(--accent-primary);
-            box-shadow: 0 0 0 3px rgba(99, 91, 255, 0.15);
-        }
-
-        .form-input::placeholder {
-            color: var(--text-muted);
-        }
-
-        .reset-btn {
-            width: 100%;
-            padding: 1rem;
-            background: linear-gradient(135deg, var(--accent-primary), #7c3aed);
-            border: none;
-            border-radius: 8px;
-            color: white;
-            font-size: 1rem;
-            font-weight: 600;
-            cursor: pointer;
-            transition: transform 0.2s, box-shadow 0.2s;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 0.5rem;
-        }
-
-        .reset-btn:hover:not(:disabled) {
-            transform: translateY(-2px);
-            box-shadow: 0 10px 25px -5px rgba(99, 91, 255, 0.4);
-        }
-
-        .reset-btn:disabled {
-            opacity: 0.6;
-            cursor: not-allowed;
-        }
-
-        .reset-btn.loading .btn-text {
-            display: none;
-        }
-
-        .reset-btn .btn-loading {
-            display: none;
-        }
-
-        .reset-btn.loading .btn-loading {
-            display: flex;
-            align-items: center;
-            gap: 0.5rem;
-        }
-
-        .spinner {
-            width: 18px;
-            height: 18px;
-            border: 2px solid rgba(255, 255, 255, 0.3);
-            border-top-color: white;
-            border-radius: 50%;
-            animation: spin 0.8s linear infinite;
-        }
-
-        @keyframes spin {
-            to {
-                transform: rotate(360deg);
-            }
-        }
-
-        .message {
-            border-radius: 8px;
-            padding: 0.875rem 1rem;
-            font-size: 0.875rem;
-            display: none;
-            align-items: center;
-            gap: 0.5rem;
-        }
-
-        .message.show {
-            display: flex;
-        }
-
-        .message.error {
-            background: rgba(239, 68, 68, 0.1);
-            border: 1px solid rgba(239, 68, 68, 0.3);
-            color: #ef4444;
-        }
-
-        .message.success {
-            background: rgba(34, 197, 94, 0.1);
-            border: 1px solid rgba(34, 197, 94, 0.3);
-            color: #22c55e;
-        }
-
-        .message ion-icon {
-            font-size: 1.25rem;
-            flex-shrink: 0;
-        }
-
-        .back-link {
-            display: block;
-            text-align: center;
-            margin-top: 1.5rem;
-            color: var(--accent-primary);
-            text-decoration: none;
-            font-size: 0.9rem;
-        }
-
-        .back-link:hover {
-            text-decoration: underline;
-        }
-
-        @media (max-width: 480px) {
-            .reset-card {
-                padding: 1.75rem;
-            }
-
-            .reset-logo ion-icon {
-                font-size: 2rem;
-            }
-
-            .reset-logo span {
-                font-size: 1.25rem;
-            }
-        }
-    </style>
 </head>
 
 <body>
